--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "stylus-loader": "^6.2.0"
   },
   "dependencies": {
+    "css-minimizer-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0"
   }
 }
