--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
-
 [build]
-    publish = "dist" // ¿cual va a ser la carpeta a publicar?
-    command = "npm run build" // Comando a ejecutar para el deploy
+
+  publis = "dist"
+  command = "npm run build"
