--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx webpack --mode production --config webpack.config.js",
-    "dev": "npx webpack --mode development --config webpack.config.dev.js ",
+    "build": "webpack --mode production --config webpack.config.js",
+    "dev": "webpack --mode development --config webpack.config.dev.js ",
     "watch": "npm run dev --watch",
     "dev:watch": "npm run build --watch"
   },
