--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production --config webpack.config.js",
-    "dev": "webpack --mode development --config webpack.config.dev.js ",
-    "watch": "npm run dev --watch",
-    "dev:watch": "npm run build --watch"
+    "build": "node ./scripts/create-env.js && webpack --mode production --config webpack.config.js",
+    "dev": "webpack --config webpack.config.dev.js",
+    "build:watch": "webpack --watch --config webpack.config.js"
   },
   "repository": {
     "type": "git",
