--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A minimal portfolio with Vanilla JavaScript",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node ./scripts/create-env.js && webpack --mode production --config webpack.config.js",
+     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node ./env/create-env.js && webpack --mode production --config webpack.config.js",
     "dev": "webpack --config webpack.config.dev.js",
     "build:watch": "webpack --watch --config webpack.config.js"
   },
