--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
      "test": "echo \"Error: no test specified\" && exit 1",
-     "build": "SET API=production & webpack",
+    "build": "node ./env/create-env.js && webpack --mode production --config webpack.config.js",
     "dev": "webpack --config webpack.config.dev.js",
     "build:watch": "webpack --watch --config webpack.config.js"
   },
