--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "dotenv-webpack": "^7.0.3",
     "mini-css-extract-plugin": "^2.4.3",
     "stylus": "^0.55.0",
-    "stylus-loader": "^6.2.0"
+    "stylus-loader": "^6.2.0",
+    "webpack": "^5.61.0",
+    "webpack-cli": "^4.9.1"
   },
   "dependencies": {
     "css-minimizer-webpack-plugin": "^3.1.1",
